--- a/src/components/Header/style/style.css
+++ b/src/components/Header/style/style.css
@@ -2,34 +2,45 @@ a {
   text-decoration: none;
   text-underline: none;
 }
+.header {
+  width: 100%;
+  background-color: #f1e4ce;
+  border-bottom: 10px solid #9c2a3e;
+}
 .header-flex-wrapper {
   display: flex;
   justify-content: space-between;
 }
+.header-title {
+  width: 25%;
+  padding: 40px 0 0;
+}
 .header-title_main {
+  text-align: center;
   color: #9c2a3e;
   text-transform: uppercase;
   font-weight: 800;
-  font-size: 60px;
-  margin: 60px auto 0;
+  font-size: 52px;
+  margin: 0;
 }
 .header-title_sub {
   text-align: center;
   color: #121212;
-  font-size: 32px;
+  text-transform: uppercase;
+  font-size: 28px;
   font-weight: 600;
 }
 .header-info {
-  outline: 1px solid hotpink;
+  padding: 50px 0 0;
 }
 .header-info-contacts {
+  display: block;
   text-align: right;
 }
 .header-info-contacts .address {
   color: #121212;
   font-size: 14px;
   font-weight: 600;
-  margin-top: 30px;
 }
 .header-info-contacts .links {
   margin-top: 5px;
@@ -55,5 +66,53 @@ a {
   margin-left: 10px;
   font-size: 14px;
   font-weight: 700;
+}
+.header-info-nav ul {
+  display: flex;
+  justify-content: flex-end;
+}
+.header-info-nav__item {
+  text-transform: uppercase;
+  font-size: 14px;
+  list-style-type: none;
+  position: relative;
+  padding: 10px 15px;
+  z-index: 0;
+}
+.header-info-nav__item:first-child {
+  margin-left: 0;
+}
+.header-info-nav__item:hover:before {
+  content: "";
+  position: absolute;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #9c2a3e;
+  transform: skewX(-20deg);
+}
+.header-info-nav__item:hover a {
+  color: #fff;
+  position: relative;
+  z-index: 2;
+}
+.header-info-nav__item a {
+  color: #121212;
+}
+.header-info-nav .link_active:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: #9c2a3e;
+  transform: skewX(-20deg);
+}
+.header-info-nav .link_active > a {
+  color: #fff;
 }
 /*# sourceMappingURL=style.css.map */
