--- a/src/components/Header/style/style.less
+++ b/src/components/Header/style/style.less
@@ -2,6 +2,8 @@
 
 @main-scarlet: #9c2a3e;
 @text-black: #121212;
+@main-white: #fff;
+@main-pink: #f1e4ce;
 
 //Styles
 
@@ -10,7 +12,12 @@ a {
   text-underline: none;
 }
 
+
+
 .header {
+  width: 100%;
+  background-color: @main-pink;
+  border-bottom: 10px solid @main-scarlet;
 
   &-flex-wrapper {
     display: flex;
@@ -18,36 +25,40 @@ a {
   }
 
   &-title {
+    width: 25%;
+    padding: 40px 0 0;
+
     &_main {
+      text-align: center;
       color: @main-scarlet;
       text-transform: uppercase;
       font-weight: 800;
-      font-size: 60px;
+      font-size: 52px;
 
-      margin: 60px auto 0;
-
-
+      margin: 0;
     }
+
     &_sub {
       text-align: center;
-      color:@text-black;
-      font-size: 32px;
+
+      color: @text-black;
+      text-transform: uppercase;
+      font-size: 28px;
       font-weight: 600;
     }
   }
 
   &-info {
-    outline: 1px solid hotpink;
+    padding: 50px 0 0;
 
     &-contacts {
+      display: block;
       text-align: right;
 
       .address {
         color: @text-black;
         font-size: 14px;
         font-weight: 600;
-
-        margin-top: 30px;
       }
 
       .links {
@@ -84,5 +95,73 @@ a {
         }
       }
     }
+
+    &-nav {
+
+      ul {
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      &__item {
+        text-transform: uppercase;
+        font-size: 14px;
+        list-style-type: none;
+
+        position: relative;
+        padding: 10px 15px;
+        z-index: 0;
+
+        &:first-child {
+          margin-left: 0;
+        }
+
+        &:hover {
+
+          &:before {
+            content: "";
+            position: absolute;
+            z-index: 1;
+            width: 100%;
+            height: 100%;
+            top: 0;
+            left: 0;
+
+            background-color: @main-scarlet;
+            transform: skewX(-20deg);
+          }
+
+          a {
+            color: @main-white;
+
+            position: relative;
+            z-index: 2;
+          }
+        }
+
+        a {
+          color: @text-black;
+        }
+      }
+      .link_active {
+
+        &:before {
+          content: "";
+          position: absolute;
+          z-index: -1;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+
+          background-color: @main-scarlet;
+          transform: skewX(-20deg);
+        }
+        & > a {
+          color: @main-white;
+        }
+      }
+    }
   }
 }
+
