--- a/src/components/AdminPanel/style/style.css
+++ b/src/components/AdminPanel/style/style.css
@@ -1,9 +1,46 @@
 .admin {
   background-color: #f1e4ce;
-  height: 100vh;
+  position: relative;
+  min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
   padding: 30px 0 0;
+}
+.admin-close {
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+.admin-plus {
+  width: 30px;
+  margin: 10px auto 0;
+}
+.admin-add {
+  display: flex;
+  flex-direction: column;
+  margin-top: 30px;
+}
+.admin-add-block {
+  margin-top: 10px;
+}
+.admin-add-block > input {
+  width: 200px;
+  padding: 2px 5px;
+}
+.admin-add-block > input[type='text'] {
+  width: 200px;
+  padding: 2px 5px;
+  outline: none;
+  border: 1px solid #9c2a3e;
+  border-radius: 5px;
+}
+.admin-add-block > span {
+  display: inline-block;
+  margin-left: 20px;
+}
+.admin-add > button {
+  width: 200px;
+  margin: 30px 10px 0;
 }
 .admin-nav-ul {
   margin: 0;
@@ -22,5 +59,38 @@
 .admin-nav-ul__link a:hover {
   background-color: #9c2a3e;
   color: #f7f7f7;
+}
+.admin-info {
+  display: flex;
+  flex-direction: column;
+}
+.admin-info-item {
+  text-align: center;
+  display: flex;
+  margin-top: 10px;
+  border: 1px solid #9c2a3e;
+  box-sizing: border-box;
+  padding: 3px 2px;
+}
+.admin-info-item > div {
+  width: 20%;
+  margin-right: 40px ;
+}
+.admin-info-item > button {
+  width: 30px;
+  height: 30px;
+}
+.admin-modal {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+.admin-modal > div {
+  width: 170px;
+  text-align: center;
+  word-break: normal;
+}
+.admin-modal > div:last-of-type {
+  word-break: break-all;
 }
 /*# sourceMappingURL=style.css.map */
