--- a/src/components/AdminPanel/style/style.less
+++ b/src/components/AdminPanel/style/style.less
@@ -1,11 +1,59 @@
 .admin {
   background-color: #f1e4ce;
 
-  height: 100vh;
+  position: relative;
+  min-height: 100vh;
   width: 100%;
 
   box-sizing: border-box;
   padding: 30px 0 0;
+
+  &-close {
+    position: absolute;
+
+    top: 5px;
+    right: 5px;
+  }
+
+  &-plus {
+    width: 30px;
+    margin: 10px auto 0;
+  }
+
+  &-add {
+    display: flex;
+    flex-direction: column;
+    margin-top: 30px;
+
+    &-block {
+      margin-top: 10px;
+
+      & > input{
+        width: 200px;
+        padding: 2px 5px;
+
+      }
+      & > input[type = 'text'] {
+        width: 200px;
+        padding: 2px 5px;
+
+        outline: none;
+        border: 1px solid #9c2a3e;
+        border-radius: 5px;
+      }
+
+      & > span {
+        display: inline-block;
+        margin-left: 20px;
+      }
+    }
+
+    & > button {
+      width: 200px;
+      margin: 30px 10px 0;
+
+    }
+  }
 
   &-nav {
 
@@ -33,6 +81,50 @@
           }
         }
       }
+    }
+  }
+
+  &-info {
+    display: flex;
+    flex-direction: column;
+
+    &-item {
+      text-align: center;
+
+      display: flex;
+      //justify-content: space-between;
+
+      margin-top: 10px;
+      border: 1px solid #9c2a3e;
+      box-sizing: border-box;
+      padding: 3px 2px;
+
+      & > div {
+        width: 20%;
+        margin-right:40px ;
+      }
+
+      & > button {
+        width: 30px;
+        height: 30px;
+      }
+    }
+  }
+
+  &-modal {
+    display: flex;
+    justify-content: space-around;
+
+    margin-top: 30px;
+
+    & > div {
+      width: 170px;
+      text-align: center;
+      word-break: normal;
+    }
+
+    & > div:last-of-type {
+      word-break: break-all;
     }
   }
 }
