--- a/src/components/AdminPanel/style/style.css
+++ b/src/components/AdminPanel/style/style.css
@@ -67,6 +67,7 @@
 .admin-info-item {
   text-align: center;
   display: flex;
+  justify-content: space-between;
   margin-top: 10px;
   border: 1px solid #9c2a3e;
   box-sizing: border-box;
@@ -82,13 +83,22 @@
 }
 .admin-modal {
   display: flex;
-  justify-content: space-around;
   margin-top: 30px;
 }
 .admin-modal > div {
   width: 170px;
+  margin-left: 20px;
   text-align: center;
   word-break: normal;
+}
+.admin-modal > div > img {
+  margin-top: 20px;
+  width: 150px;
+}
+.admin-modal > div > textarea {
+  margin-left: 70px;
+  height: 100px;
+  width: 300px;
 }
 .admin-modal > div:last-of-type {
   word-break: break-all;
