made tickets bargain

--- a/src/components/Tickets/style/style.less
+++ b/src/components/Tickets/style/style.less
@@ -57,7 +57,14 @@
     font-size: 22px;
 
     &__button {
-      //margin-left: 50px;
+      outline: 1px solid #9c2a3e;
+      margin-right: 10px;
+      padding: 3px 20px;
+
+      &:hover {
+        background-color: lighten(#9c2a3e, 30%);
+        color: white;
+      }
     }
   }
 }
