--- a/src/components/Tickets/style/style.css
+++ b/src/components/Tickets/style/style.css
@@ -42,6 +42,15 @@
   margin: 20px 0 ;
   font-size: 22px;
 }
+.ticket-price__button {
+  outline: 1px solid #9c2a3e;
+  margin-right: 10px;
+  padding: 3px 20px;
+}
+.ticket-price__button:hover {
+  background-color: #dd8292;
+  color: white;
+}
 .chosen {
   background-color: #9c2a3e;
 }
