--- a/src/components/AdminPanel/style/style.less
+++ b/src/components/AdminPanel/style/style.less
@@ -8,6 +8,18 @@
   box-sizing: border-box;
   padding: 30px 0 0;
 
+  &-hall-item {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
+  &-hall-innerItem {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 10px;
+  }
+
   &-close {
     position: absolute;
 
